--- a/style.css
+++ b/style.css
@@ -24,3 +24,9 @@ img {
   margin: 20px;
   border-radius: 50px;
 }
+p {
+  background-color: teal;
+  color: yellowgreen;
+  border-radius: 40px;
+  padding: 20px;
+}
